--- a/styles/parts/_header.scss
+++ b/styles/parts/_header.scss
@@ -1,5 +1,11 @@
 .header{
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
     &-title{
         font-size: 90px;
+    }
+    &-nav{
+        gap: 10px;
     }
 }
