--- a/styles/parts/_main.scss
+++ b/styles/parts/_main.scss
@@ -1,19 +1,21 @@
 .main{
-    padding-top: 58px;
-    width: 95%;
+    padding: 58px 300px;
+    
 
     &-users{
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         gap: 50px;
+
         &-card:hover &-card-inner{
             transform: rotateY(180deg);    
         }
 
         &-card{
             background-color: transparent;
-            width: 300px;
-            height: 417px;
+            width: 400px;
+            height: 300px;
             border: 1px;
             perspective: 1000px;
 
@@ -34,24 +36,84 @@
                 }
 
                 &-front{
-                    background-color: #9b0d0d;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: rgb(207, 207, 172);
                     color: black;
                     border-radius: 10px;
-                    .card-thumb{
+
+                    .card{
+                        
+                        &-thumb{
                         border-radius: 100%;
                         width: 120px;
+                        }
+
+                        &-title{
+                            margin-top: 18px;
+                            text-transform: capitalize;
+                        }
+
+                        &-subtitle{
+                            margin-top: 10px;
+                        }
                     }
+
+                    
                 }
                 
                 &-back{
-                    background-color: rgb(29, 247, 232);
+                    background-color: rgb(207, 207, 172);
                     color: rgb(0, 0, 0);
                     transform: rotateY(180deg);
                     list-style: none;
                     text-align: center;
                     border-radius: 10px;
-                    width: 300px;
-                    height: 417px;
+                    width: 400px;
+                    height: 300px;
+
+                    .card-game{
+                        margin-top: 24px;
+                    }
+
+                    .card-game-img{
+                        margin-top: 12px;
+                        width: 130px;
+                        border-radius: 10px;
+                    }
+                }
+            }
+        }
+    }
+
+    &-games{
+        display: flex;
+        flex-direction: column;
+
+        &-item{
+            border: 1px ;
+            border-radius: 5px;
+            padding: 8px;
+            background-color: rgb(207, 207, 172);
+            margin-bottom: 24px;
+
+            &-name{
+
+            }
+
+            &-developer{
+                text-transform: capitalize;
+            }
+
+            .platforms{
+                &-btn{
+                    border: 1px;
+                    padding: 5px 10px;
+                    color: rgb(27, 122, 255);
+                    background-color: rgb(215, 213, 213);
+                    border-radius: 15px;
                 }
             }
         }
